# Tareas

./: .env  pyproject.toml
src/: main.py
src/controller/: TareasController.py  UserController.py
src/controllers/: TareaController.py  UserController.py
src/database/: tareasDB.sql
src/models/: TareasModel.py  schemasModel.py  users.py
src/views/: LoginView.py  dashboard.py
